<resources>

    <string name="app_name">D\'Fibrinogen</string>

    <string name="main_title_home">Home</string>
    <string name="main_title_friend">Friends</string>
    <string name="main_title_category">Categories</string>
    <string name="main_title_post">Posts</string>
    <string name="main_title_other">Other</string>

    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>

</resources>
