<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group
        android:id="@+id/group_home"
        android:checkableBehavior="all"
        android:menuCategory="container">

        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home"
            android:title="@string/main_title_home"
            android:checked="true"/>

        <item
            android:id="@+id/nav_friend"
            android:icon="@drawable/ic_friend"
            android:title="@string/main_title_friend" />

        <item
            android:id="@+id/nav_category"
            android:icon="@drawable/ic_organization"
            android:title="@string/main_title_category" />

        <item
            android:id="@+id/nav_post"
            android:icon="@drawable/ic_schedule_date"
            android:title="@string/main_title_post" />

        <item
            android:id="@+id/nav_other"
            android:icon="@drawable/ic_more_horiz"
            android:title="@string/main_title_other" />

    </group>

</menu>
